libsiridb (0.9.0)

  * Initial version for the C program language.

  * Inluding a libuv example implementation.

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  14 Jun 2017