@@ -20,22 +20,31 @@ endif
 
 -include ../makefile.defs
 
+OS := $(shell uname)
+ifeq ($(OS),Darwin)
+FN := libsiridb.dylib
+INSTALL_PATH := /usr/local
+else
+FN := libsiridb.so
+INSTALL_PATH := /usr
+endif
+
 # Add inputs and outputs from these tool invocations to the build variables
 
 # All Target
-all: libsiridb.so
+all: libsiridb
 
 # Tool invocations
-libsiridb.so: $(OBJS) $(USER_OBJS)
+libsiridb: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross GCC Linker'
-	gcc -shared -o "libsiridb.so" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc -shared -o $(FN) $(OBJS) $(USER_OBJS) $(LIBS) $(LDFLAGS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(LIBRARIES)$(OBJS)$(C_DEPS) libsiridb.so
+	-$(RM) $(LIBRARIES)$(OBJS)$(C_DEPS) $(FN)
 	-@echo ' '
 
 .PHONY: all clean dependents
