@@ -1,12 +1,12 @@
 .PHONY: install
 install:
-	@mkdir /usr/include/libsiridb
-	@cp ../include/*.h /usr/include/libsiridb/
-	@cp libsiridb.so /usr/lib/x86_64-linux-gnu/libsiridb.so
+	@mkdir $(INSTALL_PATH)/include/libsiridb
+	@cp ../include/*.h $(INSTALL_PATH)/include/libsiridb/
+	@cp $(FN) $(INSTALL_PATH)/lib/$(FN)
 
 .PHONY: uninstall
 uninstall:
-	@rm -f /usr/include/libsiridb/*.h
-	@rmdir /usr/include/libsiridb/
-	@rm -f /usr/lib/x86_64-linux-gnu/libsiridb.so
+	@rm -f $(INSTALL_PATH)/include/libsiridb/*.h
+	@rmdir $(INSTALL_PATH)/include/libsiridb/
+	@rm -f $(INSTALL_PATH)/lib/$(FN)
 
